--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-notify-toast": "^0.4.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-toastify": "^3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
