--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-jest": "^22.1.0",
+    "jest": "^22.1.4"
   }
 }
