--- a/package.json
+++ b/package.json
@@ -4,22 +4,40 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "babel-polyfill": "^6.26.0",
+    "enzyme": "^3.3.0",
+    "enzyme-to-json": "^3.3.1",
     "material-ui": "^0.20.0",
+    "material-ui-pagination": "^1.1.6",
+    "materialui-pagination": "0.0.6",
     "react": "^16.2.0",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
     "react-notify-toast": "^0.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
-    "react-toastify": "^3.3.1"
+    "react-toastify": "^3.3.1",
+    "test": "^0.6.0",
+    "utils": "^0.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "jest --env=jsdom --coverage",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-jest": "^22.1.0",
-    "jest": "^22.1.4"
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.2.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-register": "^6.26.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "expect": "^22.2.0",
+    "jest": "^22.2.1",
+    "jsdom": "^11.6.2",
+    "mocha": "^5.0.0"
   }
 }
