--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "coveralls": "^3.0.0",
     "enzyme": "^3.3.0",
     "enzyme-to-json": "^3.3.1",
     "material-ui": "^0.20.0",
