--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - npm install
 # command to run tests
 script:
-  - npm test
+  - npm test -- --coverage
  
-after_success: 'npm run coveralls'
+after_success: 
+  - npm run coveralls
