[Chore]Add cat command

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ install:
 script:
   - npm test -- --coverage
  
-after_success: 
-  - coveralls
+after_script: "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+
 
