--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.2.0",
     "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
+    "react-material-ui-form-validator": "^1.1.0",
     "react-notify-toast": "^0.4.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
