Add deploy command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,9 @@ jobs:
         
       # run tests!
       - run: npm test || exit 0
+
+      - deployment:
+          production:
+            branch: master
+            heroku:
+              appname: yummy-recipes-react-appln
