--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@
 #
 version: 2
 jobs:
-  build:
+  build-job:
     docker:
       # specify the version you desire here
       - image: circleci/node:9.3.0
@@ -36,4 +36,43 @@ jobs:
         
       # run tests!
       - run: npm test || exit 0
+
+  deploy-job:
+    docker:
+      - image: circleci/python:3.6.1
+        environment:
+          TEST_DB: postgresql://yummyrecipes:admin@localhost:5432/test
+             
+      - image: circleci/postgres:9.6.6
+        environment:
+          SECRET_KEY: "********"
+          POSTGRES_USER: yummyrecipes
+          POSTGRES_DB: test
+          POSTGRES_PASSWORD: admin
+
+    working_directory: ~/yummy-recipes-react-app
+    steps:
+
+      - checkout
+      - run:
+          name: Deploy Master to Heroku
+          command: |  # this command is framework-dependent and may vary 
+            bash .circleci/setup-heroku.sh 
+            heroku git:remote -a yummy-recipes-react-appln
+            git push --force https://heroku:$HEROKU_API_KEY@git.heroku.com/yummy-recipes-react-appln.git HEAD:refs/heads/master
+            sleep 5  # sleep for 5 seconds to wait for dynos
+            heroku restart
+
+workflows:
+  version: 2
+  build-deploy:
+    jobs:
+      - build-job
+      - deploy-job:  # only deploy when master successfully builds
+          requires:
+            - build-job
+          filters:
+            branches:
+              only: master
+
 
